--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/express": "^5.0.4",
