Updated deliveryCalculator to use Haversine formula

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "country-state-city": "^3.2.1",
     "express": "^5.1.0",
     "zod": "^4.1.12"
   },
